k3s-cluster/ext-node-exporter.yaml
apiVersion: v1
kind: Service
metadata:
  name: foxtrot-svc-ext
  namespace: monitoring
spec:
  ports:
    - name: foxtrot-svc-ext-port
      protocol: TCP
      port: 9100
      targetPort: 9100
      nodePort: 0
selector:
---
apiVersion: v1
kind: Endpoints
metadata:
  name: foxtrot-svc-ext
  namespace: monitoring
subsets:
  - addresses:
      - ip: 192.168.7.151
    ports:
      - port: 9100
        name: foxtrot-svc-ext-port
---
apiVersion: v1
kind: Service
metadata:
  name: charlie-svc-ext
  namespace: monitoring
spec:
  ports:
    - name: charlie-svc-ext-port
      protocol: TCP
      port: 9100
      targetPort: 9100
      nodePort: 0
selector:
---
apiVersion: v1
kind: Endpoints
metadata:
  name: charlie-svc-ext
  namespace: monitoring
subsets:
  - addresses:
      - ip: 192.168.7.152
    ports:
      - port: 9100
        name: charlie-svc-ext-port
