k3s-cluster/ingress-rules.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-backend-traefik
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.frontend.passHostHeader: "true"
    traefik.frontend.rule.type: "PathPrefixStrip"
spec:
  rules:
    - host: grafana.sierra.lan 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prom-stack-grafana
                port:
                  number: 80
    - host: prometheus.sierra.lan 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prom-stack-kube-prometheus-prometheus
                port:
                  number: 9090      
    - host: longhorn.sierra.lan 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
